--- a/css/partials/global/_mediaqueries.scss
+++ b/css/partials/global/_mediaqueries.scss
@@ -1,184 +1,15 @@
-
-// @media (min-width: 425px) {
-//   .open-grid {
-//     grid-template-columns: repeat(auto-fill, minmax(25vh, 1fr));
-//     grid-template-columns: repeat(auto-fit, minmax(25vh, 1fr));
-//     //grid-template-columns: 1fr 1fr 1fr;
-//     grid-gap: 0.625rem;
-//     padding: 4.6875rem 1.25rem 1.25rem;
-//   }
-
-//   // .open-grid img {
-//   //   min-height: clamp(15rem, 23rem, 6vw);
-//   // }
-// }
-
 // only apply when window width is less than 472
-@media (max-width: 472px) {
-    .open-grid {
-     grid-template-columns:repeat(auto-fit, minmax(50px, 1fr));
-    }
-}
 
 
-@media (max-width: 675px) {
-    #modal-img {
 
-        max-width: 90%;
+// @media (max-width: 675px) {
+//     #modal-img {
 
-    }
-}
+//         max-width: 90%;
+
+//     }
+// }
 
 //only apply if window width is > 510px
-@media (min-width: 510px) {
-    .out-mains {
-        min-height: calc(100vh - 62px - 36px);
-    }
-    .form-container{
-        width: 60%;
-    }
-}
+//min-width
 
-@media (min-width: 700px) {
-    
-    .burger-nav{
-        display: none;
-    }
-    .gallery-nav{
-        display: block;
-        height: auto;
-        width: auto;
-        ul{
-            width: 100%;
-        }
-    }
-    .image-container {
-        position: relative;
-        min-height: 25vh;
-    }
-
-    #grid-container {
-        min-height: calc(100vh - 50px - 66px - 2.45rem);
-    }
-}
-
-@media (min-width: 1077px) {
-    .header-flex > h1{
-     display:inline ;   
-    }
-    .open-grid {
-     grid-template-columns:repeat(auto-fit, minmax(150px, 1fr));
-    }
-    #grid-container {
-        min-height: calc(100vh - 61px - 66px - 2.45rem);
-    }
-}
-
-
-
-// @media (min-width: 700px) {
-//   .open-title {
-//     font-size: 2.68rem;
-//     width: 90%;
-//   }
-
-//   // .open-grid img {
-//   //   min-height: 19.6875rem;
-//   //   max-height: 19.6875rem;
-//   // }
-
-//   #index-main {
-//     #grid-container {
-//       margin: 0rem auto 3.25rem;
-//     }
-//   }
-
-//   .contacts {
-//     margin: 0 50px 0 auto;
-//   }
-
-//   .out-mains {
-//     margin: 4rem 0 0;
-//   }
-
-//   #modal-img {
-//     max-height: 85vh;
-//   }
-
-//   .open-grid {
-//     grid-template-columns: repeat(auto-fill, minmax(25vh, 1fr));
-//     //grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
-    
-//     padding: 4.6875rem 1.25rem 1.25rem;
-//   }
-
-//   #modal-box {
-//     .image-details {
-//       font-size: 1rem;
-//     }
-//   }
-// }
-
-
-
-
-// @media (min-width: 1166px){
-//   html {
-//     font-size: 18px;
-//   }
-// }
-
-
-
-// @media (min-width: 1400px){
-//   html {
-//     font-size: 24px;
-//   }
-// }
-
-
-
-// @media (min-width: 2000px) {
-//   html {
-//     font-size: 24px;
-//   }
-// }
-
-
-// @media (min-width: 1000px) {
-//   header[data-header-images] {
-//     padding: 0;
-//     .header-flex {
-//       width: 95%;
-//       align-items: center;
-//       justify-content: space-between;
-//       h1 {
-//         display: block;
-//       }
-
-//       .search-bar {
-//         width: 50%;
-//         height: 2rem;
-//       }
-//       nav {
-//         margin: 0px 62px 0px auto;
-//       }
-//     }
-//   }
-// }
-
-// @media (min-width: 1400px) {
-//   .open-grid {
-//     grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
-//   }
-
-//    .open-grid img {
-//     min-height: 441px;
-//   }
-// }
-
-@media (min-width: 2000px) {
-    .open-grid {
-        grid-template-columns:repeat(auto-fit, minmax(200px, 1fr));
-    }
-}
